2003-04-18 	Kevin Vigor <kevin@vigor.nu>

	* src/SDCCopt.c: add special case optimization to replace modulo by
	  a power of two with a bitwise AND.

2003-04-18    <johan@balder>

	* src/mcs51/gen.c (getFreePtr): fixed bug #635354

2003-04-17    <johan@balder>

	* src/mcs51/ralloc.c (packRegsForAssign): fixed bug #716790 and removes lot's of redundant register usage around function calls
	* src/mcs51/ralloc.c (packRegisters): fixed bug #720667

2003-04-13  Borut Razem <borut.razem@siol.net>

	* doc/sdccman.lyx: updated info about #pragma SAVE/RESTORE nesting
	* configure.in, configure: fixed problems on cygwin/WinCVS environmet with ports.* line endings;
	  fixed mingw problem in adl_NORMALIZE_PATH

2003-04-12  Borut Razem <borut.razem@siol.net>

	* fixed "#pragma SAVE/RESTORE can not be nested":
	* src/SDCC.lex: reworked pragma handling functions
	* sdcc/src/SDCCglobl.h: reworked stack handling macros
	* support/Util/SDCCerr.c, support/Util/SDCCerr.h: added E_STACK_VIOLATION error

2003-04-12  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCutil.c (pathEquivalent): defined but not used
	* debugger/mcs51/sdcdb.c: replace SDCC_LIB_DIR
	* configure.in: remove sdcc_datadir, sdcc_lib_dir and sdcc_include_dir
	* configure: rebuilt from configure.in
	* sdccconf_in.h: remove SDCC_LIB_DIR and SDCC_INCLUDE_DIR
	* sdcc_vc_in.h: remove SDCC_LIB_DIR and SDCC_INCLUDE_DIR
	* device/include/Makefile.in: replace sdcc_datadir
	* device/lib/Makefile.in: replace sdcc_datadir
	* Makefile.common.in: add LDFLAGS from configure
	* packihx/Makefile.in: use LDFLAGS
	* src/Makefile.in: use LDFLAGS
	* support/cpp2/Makefile.in: add LDFLAGS from configure
	* support/makebin/Makefile: use LDFLAGS
	* .version: bumped version number to 2.3.5

2003-04-12  Borut Razem <borut.razem@siol.net>

	* completed "different paths" task:
	* src/SDCCmacro.c: fixed bug in handling quotes
	* src/SDCCutil.c, src/SDCCutil.c: rewritten getPrefixFromBinPath()